[tool.poetry]
name = "plombery-sqlite-backups"
version = "0.1.0"
description = ""
authors = ["Sebastian Strobl <sebastian.strobl@gmx.de>"]
readme = "README.md"
packages = [{include = "plombery_sqlite_backups"}]

[tool.poetry.dependencies]
python = "~3.10"
plombery = "^0.4.1"
lz4 = "^4.3.3"
aiofiles = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
